organizzazione e modifiche header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <body>
     <header>
         <img src="img/logo.png" alt="">
-        <nav> Features Editorials Environment Blog Shop Contact</nav>
+        <nav> 
+            <ul>
+                <li> <a href="https://www.google.it/">Features</a> </li>
+                <li> <a href="https://www.google.it/">Editorials</a></li>
+                <li><a href="https://www.google.it/">Environment</a></li>
+                <li><a href="https://www.google.it/">Blog</a></li>
+                <li><a href="https://www.google.it/">Shop</a></li>
+                <li><a href="https://www.google.it/">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
