modifiche al carosello

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Wordpress layout</title>
 
     <link rel="stylesheet" href="css/style.css">
@@ -13,12 +16,12 @@
         <img src="img/logo.png" alt="">
         <nav> 
             <ul>
-                <li> <a href="https://www.google.it/">Features</a> </li>
-                <li> <a href="https://www.google.it/">Editorials</a></li>
-                <li><a href="https://www.google.it/">Environment</a></li>
-                <li><a href="https://www.google.it/">Blog</a></li>
-                <li><a href="https://www.google.it/">Shop</a></li>
-                <li><a href="https://www.google.it/">Contact</a></li>
+                <li> <a href="https://www.google.it/">FEATURES</a> </li>
+                <li> <a href="https://www.google.it/">EDITORIALS</a></li>
+                <li><a href="https://www.google.it/">ENVIRONMENT</a></li>
+                <li><a href="https://www.google.it/">BLOG</a></li>
+                <li><a href="https://www.google.it/">SHOP</a></li>
+                <li><a href="https://www.google.it/">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -26,22 +29,27 @@
     <main>
 
         <!-- sezione 1 -->
-        <div class="container-yellow">
+        <div class="carousel">
             <img src="img/banner.jpg" alt="">
-
+            <div class="banner-text">
+                <h2>
+                    Consectetur eligendi autem delectus libero animi voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                </h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur error illum in esse odit amet quasi ipsum aliquid! Enim, reprehenderit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+            </div>
         </div>
 
         <!-- sezione 2 -->
-        <div class="container-blue">
+        <div class="main-article">
 
             <!-- div simil-header -->
             <div class="section-header">
-                <h2>Leadership</h2>
+                <h1>Leadership</h1>
                 <span class="subtitle">Sei veramente bravo!</span>
             </div>   
 
             <!-- div simil nav -->
-            <div class="article one">
+            <div class="article left">
                 <img src="img/img-1.jpg" alt="">
                 <div class="filter">
                 </div>
@@ -49,12 +57,12 @@
             </div>
 
             <!-- div main article -->
-            <div class="article two">
+            <div class="article middle">
                 <img src="img/banner-2.jpg" alt="">
             </div>
 
             <!-- div altra sezione -->
-            <div class="article three">
+            <div class="article right">
                  <img src="img/img-3.jpg" alt="">
             </div>
 
