--- a/index.html
+++ b/index.html
@@ -50,20 +50,23 @@
 
             <!-- div simil nav -->
             <div class="article left">
-                <img src="img/img-1.jpg" alt="">
-                <div class="filter">
+                <div class="article-img left">
+                    <img src="img/img-1.jpg" alt="">
                 </div>
-                
             </div>
 
             <!-- div main article -->
             <div class="article middle">
-                <img src="img/banner-2.jpg" alt="">
+                <div class="article-img middle">
+                    <img src="img/banner-2.jpg" alt="">
+                </div>
             </div>
 
             <!-- div altra sezione -->
             <div class="article right">
-                 <img src="img/img-3.jpg" alt="">
+                <div class="article-img right">
+                    <img src="img/img-3.jpg" alt="">
+                </div>
             </div>
 
         </div>
