--- a/index.html
+++ b/index.html
@@ -48,24 +48,36 @@
                 <span class="subtitle">Sei veramente bravo!</span>
             </div>   
 
-            <!-- div simil nav -->
+            <!-- div articolo di sinistra-->
             <div class="article left">
                 <div class="article-img left">
                     <img src="img/img-1.jpg" alt="">
                 </div>
+                <div class="article-text">
+                    <h3>Lorem</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ab distinctio ratione, expedita placeat harum laudantium natus accusantium vel magnam nostrum nesciunt. Error iusto fugiat suscipit distinctio animi culpa sequi!</p>
+                </div>
             </div>
 
-            <!-- div main article -->
+            <!-- div articolo grande -->
             <div class="article middle">
                 <div class="article-img middle">
                     <img src="img/banner-2.jpg" alt="">
                 </div>
+                <div class="article-text">
+                    <h3>Lorem</h3>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda, itaque neque, earum asperiores vitae ducimus enim, iste repellat ipsam eius veritatis qui incidunt voluptatem consequatur praesentium aliquid! Atque, modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quisquam sunt dignissimos quis necessitatibus ratione sequi veniam earum? Excepturi iusto eos reprehenderit cum numquam odit eligendi consequuntur est ipsa alias? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis quos officia adipisci, illo nesciunt id voluptates laborum nobis, dignissimos animi eaque voluptas inventore, totam consequuntur aspernatur tenetur sed ullam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda, itaque neque, earum asperiores vitae ducimus enim, iste repellat ipsam eius veritatis qui incidunt voluptatem consequatur praesentium aliquid! Atque, modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quisquam sunt dignissimos quis necessitatibus ratione sequi veniam earum? Excepturi iusto eos reprehenderit cum numquam odit eligendi consequuntur est ipsa alias? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis quos officia adipisci, illo nesciunt id voluptates laborum nobis, dignissimos animi eaque voluptas inventore, totam consequuntur aspernatur tenetur sed ullam.
+                </div>
             </div>
 
-            <!-- div altra sezione -->
+            <!-- div articolo di destra -->
             <div class="article right">
                 <div class="article-img right">
                     <img src="img/img-3.jpg" alt="">
+                </div>
+                <div class="article-text">
+                    <h3>Lorem</h3>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda enim magni a natus quis, ratione, temporibus, quaerat nobis pariatur nesciunt blanditiis. Accusamus in reprehenderit quam temporibus praesentium illum iusto expedita.
                 </div>
             </div>
 
