--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- sezione 2 -->
         <div class="main-article">
 
-            <!-- div simil-header -->
+            <!-- div titolo -->
             <div class="section-header">
                 <h1>Leadership</h1>
                 <span class="subtitle">Sei veramente bravo!</span>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="article-text">
                     <h3>Lorem</h3>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda, itaque neque, earum asperiores vitae ducimus enim, iste repellat ipsam eius veritatis qui incidunt voluptatem consequatur praesentium aliquid! Atque, modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quisquam sunt dignissimos quis necessitatibus ratione sequi veniam earum? Excepturi iusto eos reprehenderit cum numquam odit eligendi consequuntur est ipsa alias? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis quos officia adipisci, illo nesciunt id voluptates laborum nobis, dignissimos animi eaque voluptas inventore, totam consequuntur aspernatur tenetur sed ullam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda, itaque neque, earum asperiores vitae ducimus enim, iste repellat ipsam eius veritatis qui incidunt voluptatem consequatur praesentium aliquid! Atque, modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quisquam sunt dignissimos quis necessitatibus ratione sequi veniam earum? Excepturi iusto eos reprehenderit cum numquam odit eligendi consequuntur est ipsa alias? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis quos officia adipisci, illo nesciunt id voluptates laborum nobis, dignissimos animi eaque voluptas inventore, totam consequuntur aspernatur tenetur sed ullam.
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda, itaque neque, earum asperiores vitae ducimus enim, iste repellat ipsam eius veritatis qui incidunt voluptatem consequatur praesentium aliquid! Atque, modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quisquam sunt dignissimos quis necessitatibus ratione sequi veniam earum? Excepturi iusto eos reprehenderit cum numquam odit eligendi consequuntur est ipsa alias? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis quos officia adipisci, illo nesciunt id voluptates laborum nobis, dignissimos animi eaque voluptas inventore, totam consequuntur aspernatur tenetur sed ullam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia assumenda, itaque neque, earum asperiores vitae ducimus enim, iste repellat ipsam eius veritatis qui incidunt voluptatem consequatur praesentium aliquid! Atque, modi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus quisquam sunt dignissimos quis necessitatibus ratione sequi veniam earum? Excepturi iusto eos reprehenderit cum numquam odit eligendi consequuntur est ipsa alias? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias blanditiis quos officia adipisci, illo nesciunt id voluptates laborum nobis, dignissimos animi eaque voluptas inventore, totam consequuntur aspernatur tenetur sed ullam.</p> 
                 </div>
             </div>
 
@@ -77,7 +77,7 @@
                 </div>
                 <div class="article-text">
                     <h3>Lorem</h3>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda enim magni a natus quis, ratione, temporibus, quaerat nobis pariatur nesciunt blanditiis. Accusamus in reprehenderit quam temporibus praesentium illum iusto expedita.
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda enim magni a natus quis, ratione, temporibus, quaerat nobis pariatur nesciunt blanditiis. Accusamus in reprehenderit quam temporibus praesentium illum iusto expedita.</p>
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
     </main>
 
     <footer>
-
+        Designed with <span class="heart">&hearts;</span> 
     </footer>
 
 </body>
